--- a/main.css
+++ b/main.css
@@ -56,6 +56,10 @@ body {
     background: #FAFAFD;
     padding-top: 10em;
     padding-bottom: 10em;
+    background-image: url('assets/Group%20510.png');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
 }
 
 .hero img {
@@ -107,13 +111,14 @@ body {
 .segment-card {
     padding-right: 2em;
     padding-left: 2em;
+    text-align: center;
 }
 
 .card-holder {
     /* Ellipse 2 */
     background: #FAFAFD;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.14);
-    border-radius: 150px;
+    border-radius: 170px;
     padding: 2em;
 }
 
@@ -127,7 +132,6 @@ body {
     font-style: normal;
     font-weight: 800;
     font-size: 20px;
-    line-height: 38px;
     text-align: center;
     color: #000000;
     margin-top: 1em;
@@ -152,12 +156,12 @@ body {
 }
 
 .section-body {
-    padding-top: 5em;
-    padding-bottom: 5em;
+    padding-top: 3em;
+    padding-bottom: 3em;
 }
 
 .features {
-    background: #FAFAFD;
+    background: #F6F6FF;
 }
 
 .feature-bigcard {
@@ -242,7 +246,7 @@ body {
 }
 
 .blogs {
-    background-color: #FAFAFD;
+    background-color: #F6F6FF;
 }
 
 .blog-card {
@@ -277,11 +281,11 @@ body {
 }
 
 .segment-card img {
-    max-width: 5em;
+    max-width: 4em;
 }
 
 .partner {
-    background: #FAFAFD;
+    background: #F6F6FF;
 }
 
 .partner img {
@@ -339,15 +343,16 @@ body {
 .sub-hero {
     padding-top: 5em;
     padding-bottom: 5em;
-    background-color: #FAFAFD;
+    background-color: #3A83B5;
 }
 
 .sub-hero .theme-h1 {
     text-align: center;
+    color: #fff;
 }
 
 .about-u {
-    background-image: url('assets/Feature/Single/Cover%20Image.png');
+    background-image: url('assets/business-strategy-success-target-goals.jpg');
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -452,16 +457,17 @@ body {
     align-items: center;
 }
 
-.partner-form .form-group input {
+.partner-form .form-group input,
+textarea {
     max-width: 70%;
     background: #FFFFFF !important;
-    border-radius: 8px;
+    border-radius: 8px !important;
     font-family: Avenir;
     font-style: normal;
-    font-weight: 500;
-    font-size: 18px;
-    color: rgba(0, 0, 0, 0.4);
-    border: 0px solid;
+    font-weight: 500 !important;
+    font-size: 18px !important;
+    color: rgba(0, 0, 0, 0.4) !important;
+    border: 0px solid !important;
     padding-top: 8px;
     padding-bottom: 8px;
     min-height: 45px;
@@ -479,7 +485,7 @@ body {
 }
 
 .partner-form-section {
-    background-color: #FAFAFD;
+    background-color: #F6F6FF;
 }
 
 .form-group select {
@@ -568,4 +574,15 @@ body {
     .step-card {
         margin-bottom: 1em;
     }
+}
+
+.partner-hero {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url('none');
+}
+
+.car-row {
+    display: flex;
+    justify-content: center;
 }
