--- a/main.css
+++ b/main.css
@@ -54,7 +54,7 @@ body {
 
 .hero {
     background: #FAFAFD;
-    padding-top: 10em;
+    padding-top: 8em;
     padding-bottom: 10em;
     background-image: url('assets/Group%20510.png');
     background-repeat: no-repeat;
@@ -71,7 +71,7 @@ body {
     font-family: Red Hat Display;
     font-style: normal;
     font-weight: 800;
-    font-size: 52px;
+    font-size: 45px;
     line-height: 61px;
     color: #000000;
 }
@@ -138,7 +138,8 @@ body {
 }
 
 .hero .theme-p {
-    font-size: 24px;
+    font-size: 22px;
+    padding-right: 4em;
 }
 
 .segement-row {
@@ -585,4 +586,28 @@ textarea {
 .car-row {
     display: flex;
     justify-content: center;
+}
+
+.dropdown-submenu {
+    position: relative;
+    top: 0;
+    left: 100%;
+    margin-top: -1px;
+}
+
+.dropdown-submenu .dropdown-menu {
+    top: 0;
+    left: 100%;
+    margin-top: -1px;
+}
+
+.caret::after {
+    display: inline-block;
+    margin-left: 0.255em;
+    vertical-align: 0.255em;
+    content: "";
+    border-top: 0.3em solid;
+    border-right: 0.3em solid transparent;
+    border-bottom: 0;
+    border-left: 0.3em solid transparent;
 }
