--- a/main.css
+++ b/main.css
@@ -707,3 +707,12 @@ textarea {
 .vision-card img {
     max-width: 180px;
 }
+
+.logos marquee img {
+    max-width: 120px;
+}
+
+.logos marquee div div {
+    padding-right: 2em;
+    padding-left: 2em;
+}
