--- a/main.css
+++ b/main.css
@@ -58,8 +58,10 @@ body {
     padding-bottom: 10em;
     background-image: url('assets/Group%20510.png');
     background-repeat: no-repeat;
-    background-position: center center;
+    background-position: center top;
     background-size: cover;
+    border-bottom-left-radius: 3em;
+    border-bottom-right-radius: 3em;
 }
 
 .hero img {
@@ -112,13 +114,15 @@ body {
     padding-right: 2em;
     padding-left: 2em;
     text-align: center;
+    margin-bottom: 1em;
+    margin-top: 1em;
 }
 
 .card-holder {
     /* Ellipse 2 */
     background: #FAFAFD;
-    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.14);
-    border-radius: 170px;
+    box-shadow: 3px 6px 24px rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
     padding: 2em;
 }
 
