--- a/main.css
+++ b/main.css
@@ -111,8 +111,8 @@ body {
 }
 
 .segment-card {
-    padding-right: 2em;
-    padding-left: 2em;
+    padding-right: 0em;
+    padding-left: 0em;
     text-align: center;
     margin-bottom: 1em;
     margin-top: 1em;
@@ -123,7 +123,8 @@ body {
     background: #FAFAFD;
     box-shadow: 3px 6px 24px rgba(0, 0, 0, 0.1);
     border-radius: 20px;
-    padding: 2em;
+    padding: 1em;
+    transition: 0.3s;
 }
 
 .card-holder img {
@@ -174,6 +175,8 @@ body {
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.12);
     padding: 2em;
     text-align: center;
+    min-height: 290px;
+    transition: 0.3s;
 }
 
 .description {
@@ -192,7 +195,7 @@ body {
     font-weight: normal;
     font-size: 18px;
     line-height: 24px;
-    text-align: center;
+    text-align: left;
     color: rgba(7, 6, 22, 0.81);
     padding-top: 1em;
 }
@@ -204,8 +207,8 @@ body {
     font-family: Avenir;
     font-style: normal;
     font-weight: normal;
-    font-size: 24px;
-    line-height: 32px;
+    font-size: 20px;
+    line-height: 24px;
     text-align: center;
     color: #000000;
     padding-top: 12px;
@@ -336,19 +339,21 @@ body {
     line-height: 29px;
 
     /* identical to box height */
-    text-align: right;
+    text-align: left;
     color: #FFFFFF;
     padding-bottom: 32px;
 }
 
 .feature-smallcard {
     margin-bottom: 2em;
+    text-align: center;
 }
 
 .sub-hero {
-    padding-top: 5em;
-    padding-bottom: 5em;
+    padding-top: 1em;
+    padding-bottom: 2em;
     background-color: #3A83B5;
+    border-radius: 0;
 }
 
 .sub-hero .theme-h1 {
@@ -362,7 +367,7 @@ body {
     background-size: cover;
     margin-bottom: 3em;
     background-position: center center;
-    padding-top: 7em;
+    padding-top: 4em;
     background-color: #e4e4fa;
 }
 
@@ -372,11 +377,12 @@ body {
 .vision-card {
     background: #FFFFFF;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.12);
-    padding: 2em;
+    padding: 1em;
     text-align: center;
     margin-left: 2em;
     margin-right: 2em;
     margin-bottom: -6.5em;
+    transition: 0.3s;
 }
 
 .about-u .vision-card .theme-head {
@@ -727,6 +733,30 @@ textarea {
     max-width: 20px;
 }
 
+#carouselExampleControls4 .carousel-indicators li {
+    color: #232323 !important;
+    background-color: #3e84b3;
+    max-width: 20px;
+}
+
 .affiliations img {
     min-width: 120px;
+}
+
+.segment-card .card-holder:hover {
+    box-shadow: 0px 6px 12px 8px rgba(0, 0, 0, 0.12);
+}
+
+.feature-bigcard:hover {
+    box-shadow: 0px 6px 12px 8px rgba(0, 0, 0, 0.12);
+}
+
+.vision-card:hover {
+    box-shadow: 0px 6px 12px 8px rgba(0, 0, 0, 0.12);
+}
+
+@media only screen and (max-width:575px) {
+    .testimony-body {
+        margin-left: 0;
+    }
 }
